--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: prerender
-description: "A widget enabling access to dimensions of other widgets during the build phase."
+description: "A Flutter widget for building layouts based on other widgets' dimensions."
 version: 0.1.0
 homepage: https://github.com/tomwyr/prerender
 
